src/orgchart.scss
.orgchart {
  -webkit-user-select: none;       
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  
  width: 100%;
  height: 700px;
  background-color: #EEE;
  overflow: auto;
  cursor: pointer;
  cursor: -webkit-grab;  

  &:active {
    cursor: pointer;
    cursor: -webkit-grabbing;
  }

  &.invalid-data-provided::after {
    display: block;
    font-size: 24px;  
    text-align: center;
    width: 100%;
    margin-top: 2em;
    content: 'Invalid user data provided'; 
  }
}

.google-visualization-orgchart-linenode {
  border-width: 2px !important;
  border-color: #00458c !important;
}

.google-visualization-orgchart-table {
  /* Override drupal table defaults */
  border-collapse: separate;  
  padding: 48px;
  margin-bottom: 0;
  width: auto;
}

.orgchart-node, .orgchart-legend {
  font-family: "Segoe UI", Arial, sans-serif;      
  
  -webkit-user-select: text;       
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;

  background-image: none;
  background-color: #FFF;
  border: none;
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
  transition: box-shadow 0.5s;
}

.orgchart-node p, .orgchart-legend p {
  font-size: 20px;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
}

.orgchart-node {
  padding: 12px !important;
  max-width: 170px;
  cursor: pointer;
  
  &:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);    
  }

  &.orgchart-node-selected {
    background-color: rgb(255, 255, 141);
  }

  p {
    text-align: center !important;      
  }

}

.orgchart-legend {
  position: absolute;
  right: 32px;
  bottom: 32px;
  width: 400px;
  display: flex;
  flex-direction: row;
  padding: 0;

  cursor: auto;
  transition: opacity 0.3s, visibility 0.3s;

  &.disabled {
    opacity: 0;
    visibility: hidden;
  }

  div {
    padding: 12px;
  }

  p {
    text-align: left !important;    
    margin: 0;  
    margin-bottom: 8px;
    &:last-of-type {
      margin-bottom: 0;
    }
  }

  img {    
    width: 140px;
    height: 100%;
    border-radius: 4px 0 0 4px;
  }

  .orgchart-legend-email {
    line-height: 16px;   
    font-size: 14px;    
    a {
      color: #999;
      text-decoration: none;          
      &:hover {
        text-decoration: underline;      
      }
    }
  }

  .orgchart-legend-link {
    position: absolute;
    bottom: 8px;
    right: 8px;
    width: 24px;
    height: 24px;
    background-image: url("data:image/svg+xml,%3Csvg fill='%23bbbbbb' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z'/%3E%3C/svg%3E");
  }
}

